<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalDataActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:contentDescription="@string/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon2" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="375dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addressEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="4dp" />


    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="329dp"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:hint="@string/let_the_cupid_know_your_city_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonToSummary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/zipcodeEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginStart="1dp"
        android:ems="10"
        android:hint="@string/and_your_zip_code"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/tring_tring_you_had_me_at_hello"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/heightEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zipcodeEditText" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:hint="@string/how_tall_are_you"
        android:inputType="numberDecimal"
        android:paddingEnd="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/genderEditText"
        app:layout_constraintEnd_toStartOf="@+id/dateEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/birthday"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/spinner1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/heightEditText"
        app:layout_constraintTop_toBottomOf="@+id/zipcodeEditText" />

    <EditText
        android:id="@+id/genderEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/gender_male_female_other"
        android:inputType="textPersonName"
        android:paddingEnd="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="114dp"
        android:background="@android:color/transparent"
        android:dropDownSelector="@android:drawable/arrow_down_float"
        android:entries="@array/race_array"
        android:prompt="@string/select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderEditText" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="122dp"
        android:layout_height="47dp"
        android:layout_marginBottom="114dp"
        android:background="@android:color/transparent"
        android:dropDownSelector="@android:drawable/arrow_down_float"
        android:entries="@array/gender"
        android:prompt="@string/select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonToSummary"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/next"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditText" />



</android.support.constraint.ConstraintLayout>